--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "config": "^3.3.8",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "font-awesome": "^4.7.0",
+    "mysql": "^2.18.1",
     "nodemon": "^2.0.20"
   }
 }
