--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.0.0",
     "config": "^3.3.8",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
